--- a/_pages/publications.html
+++ b/_pages/publications.html
@@ -264,7 +264,7 @@ Brattico E., Tupala T., <b>Glerean E.</b>, Tervaniemi M. (2013) <br>
 	<a href="http://www.ncbi.nlm.nih.gov/pubmed/23656582?dopt=Abstract">
 	Modulated neural processing of Western harmony in folk musicians</a>.
 <br> Psychophysiology. 2013 May 9;. [Epub ahead of print] <a href="http://www.ncbi.nlm.nih.gov/pubmed/23656582?dopt=Abstract">doi:10.1111/psyp.12049</a> <a href="http://becs.aalto.fi/mbl/pdf/brattico_etal_2013.pdf">[pdf]</a>
-<br><i>[Analyzed and visualized the data, wrote the manuscript]</i>
+<br><i>[Did most of the analysis and visualized the data, wrote the manuscript]</i>
 
 </li>
 <li><div class="myAltMcontainer" ><div class='altmetric-embed' data-badge-type='donut' 
@@ -325,14 +325,14 @@ Vuust, P., Brattico, E., <b>Glerean, E.,</b> Sepp&auml;nen, M., Pakarinen, S., T
     <br><a href="http://www.cortexjournal.net/article/S0010-9452(11)00140-7/abstract">New fast mismatch negativity paradigm for determining the neural prerequisites for musical ability</a>. 
     <br>Cortex, 47(9):1091-8. 
     <a href="http://www.cortexjournal.net/article/S0010-9452(11)00140-7/abstract">doi:10.1016/j.cortex.2011.04.026</a>
-    <br><i>[Did the analysis, figures and wrote the manuscript]</i>
+    <br><i>[Did most of the analysis, figures and wrote the manuscript]</i>
 </li>
 <li><div class="myAltMcontainer" ><div class='altmetric-embed' data-badge-type='donut' data-doi="10.1016/j.biopsycho.2010.08.014"></div></div>
 Brattico, E., Jacobsen, T., De Baene, W., <b>Glerean, E.,</b> &amp; Tervaniemi, M. (2010). 
     <br><a href="http://www.sciencedirect.com/science/article/pii/S0301051110002322">Cognitive vs. affective listening modes and judgments of music--an ERP study</a>. 
     <br>Biological Psychology, 85(3), 393-409. Elsevier B.V. 
     <a href="http://www.sciencedirect.com/science/article/pii/S0301051110002322">doi:10.1016/j.biopsycho.2010.08.014</a>
-    <br><i>[Did the analysis, figures and wrote the manuscript]</i>
+    <br><i>[Did most of the analysis, figures and wrote the manuscript]</i>
 </li>
 </ol>
 <br>
