--- a/_pages/publications.html
+++ b/_pages/publications.html
@@ -324,9 +324,9 @@ Alluri, V., Toiviainen, P., J&auml;&auml;skel&auml;inen, I. P., <b>Glerean, E.,<
 </li>
 <li><div class="myAltMcontainer" ><div class='altmetric-embed' data-badge-type='donut' data-doi="10.1016/j.cortex.2011.04.026"></div></div>
 Vuust, P., Brattico, E., <b>Glerean, E.,</b> Sepp&auml;nen, M., Pakarinen, S., Tervaniemi, M., &amp; N&auml;&auml;t&auml;nen, R. (2011). 
-    <br><a href="http://www.cortexjournal.net/article/S0010-9452(11)00140-7/abstract">New fast mismatch negativity paradigm for determining the neural prerequisites for musical ability</a>. 
+    <br><a href="https://www.sciencedirect.com/science/article/pii/S0010945211001407">New fast mismatch negativity paradigm for determining the neural prerequisites for musical ability</a>. 
     <br>Cortex, 47(9):1091-8. 
-    <a href="http://www.cortexjournal.net/article/S0010-9452(11)00140-7/abstract">doi:10.1016/j.cortex.2011.04.026</a>
+    <a href="https://www.sciencedirect.com/science/article/pii/S0010945211001407">doi:10.1016/j.cortex.2011.04.026</a>
     <br><i>[Did most of the analysis, figures and wrote the manuscript]</i>
 </li>
 <li><div class="myAltMcontainer" ><div class='altmetric-embed' data-badge-type='donut' data-doi="10.1016/j.biopsycho.2010.08.014"></div></div>
