--- a/_pages/publications.html
+++ b/_pages/publications.html
@@ -5,7 +5,7 @@ permalink: /publications/
 author_profile: true
 ---
 
-You can also find my articles on <u><a href="https://scholar.google.com/citations?user=sD90SmMAAAAJ&hl=en">my Google Scholar profile</a>.</u>
+This page is absolutely not up to date, you should check my articles on <u><a href="https://scholar.google.com/citations?user=sD90SmMAAAAJ&hl=en">my Google Scholar profile</a>.</u>
 <br>Updated: 28/Nov/2018.
 
 {% include base_path %}
